[package]
name = "rscade"
version = "0.1.0"
authors = ["whts <fangfangthw@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# sdl2 = "0.34.3"

[dependencies.sdl2]
# git = "https://github.com/rust-sdl2/rust-sdl2"
version= "0.34.3"
default-features = false
features = ["image"]